--- a/Dr489_web1.html
+++ b/Dr489_web1.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name = "author" content = "Asan">
+    <link rel="stylesheet" href="cssStyle/web1.css">
     <title>web1</title>
 </head>
 <body>
+<div class="columncont">
+    <div class="col1">
+        <div class="subcol1"><h2 style="font-weight: bold;">Header Logo</h2></div>
+        <div class="subcol2"><a href="#">Header link 1</a></div>
+        <div class="subcol3"><a href="#">Header link 2</a></div>
+        <div class="subcol4"><a href="#">Header link 3</a></div>
+    </div>
+    <div class="col2">
+        <div class="sub1">
+            <h1 style="font-weight: bold;">This Website Is Awesome</h1>
+            <p>this webstie have some sub text that goes here under the main title. it's a smaller font and the color is lower contrast</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="sub2"></div>
+    </div>
+    <div class="col3"><h1 style="text-align: center;"><b>Some Random Infortmation</b></h1></div>
+    <div class="col4">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+    </div>
+    <div class="col5">
+        <div class="pbox1">this is just a subtext for illustration of an image or a text</div>
+        <div class="pbox2">this is just a subtext for illustration of an image or a text</div>
+        <div class="pbox3">this is just a subtext for illustration of an image or a text</div>
+        <div class="pbox4">this is just a subtext for illustration of an image or a text</div>        
+    </div>
+    <div class="col6">
+        <div class="quote"><p>this is an inspirational quote, people might read it, or leave it, who will know. Why are we still here? just to suffer</p>
+        <div class="author"><p><b>-Sun zu the art of war</b></p></div>
+        </div>
+    </div>
+    <div class="col7">
+        <div class="signup1">
+            <div class="signh1"><h1>Call to action! It's time!</h1>
+                <p>Sign up for out product by clicking the Sign up button right there</p>
+            </div>
+        <div class="signbutton"><button>Sign Up</button></div>
+        </div>
 
+    </div>
+    <div class="col8">
+        <div class="footer"><p>Copyright @ The Odin's project 2021</p></div>
+    </div>
+</div>
 
-
-    
 </body>
 
 
